   for testing purposes, it doesn't get installed) to help with
   this. [Craig Berry and Yitzchak Scott-Thoennes]

 - We incorrectly documented the 'dynamic_config' flag in the META.yml
   file as having a default value of false, but according to the
   META.yml spec (which, for heaven's sake, we wrote) its default
   value is true.  Fixed. [Spotted by Adam Kennedy]

 - Fix detection of $VERSION expressions that are not
   assignments. [Spotted by Chris Dolan]

 - On Windows, remove the pl2bat generated 'Build.bat' script without
   the annoying "The batch file cannot be found." error.  [Solution
   provided by RazTK and foxidrive on newsgroup alt.msdos.batch]

 - Our version comparisons should now work correctly with modules that
   use version.pm to delcare their versions (e.g. "our $VERSION =
   version->new('1.0.0')"). [John Peacock and Ron Savage]

 - We now create a Build.bat script on versions of Windows where it
   makes sense. [Yves]

 - Fixed the verbiage around choosing the correct make-alike on
   different platforms to suggest using 'perl -V:make'. [Suggested by
   anonymous user]

0.27_07  Wed Feb  1 20:07:45 CST 2006

 - The notes() method now returns the new value when called with two
   arguments, just like when it's called with one argument. [Tyler
   MacDonald]

 - The notes() method now distinguishes among the values undef, 0, and
   the empty string, where previously it didn't. [Tyler MacDonald]

 - We now unshift(@INC) rather than push(@INC) for the directory where
   a build subclass lives, so that we're sure to pick up the right
   version and not some already-installed version. [perlmonkey]

 - The SIGNATURE file for version 0.27_06 (and I'm sure for lots of
   versions before that too!) was messed up, since we were modifying
   some files after signing.  This has been band-aided for the time
   being by signing twice. [Reported by Chris Dolan]

0.27_06  Mon Jan 23 21:44:54 CST 2006
