@@ -3484,10 +3484,8 @@ sub _cbuilder {
   my $self = shift;
   my $p = $self->{properties};
   return $p->{_cbuilder} if $p->{_cbuilder};
+  return unless $self->_mb_feature('C_support');
 
-  die "Module::Build is not configured with C_support"
-    unless $self->_mb_feature('C_support');
-  
   require ExtUtils::CBuilder;
   return $p->{_cbuilder} = ExtUtils::CBuilder->new(config => $self->config);
 }
@@ -3499,14 +3497,16 @@ sub have_c_compiler {
   return $p->{have_compiler} if defined $p->{have_compiler};
   
   $self->log_verbose("Checking if compiler tools configured... ");
-  my $have = $self->_cbuilder->have_compiler;
+  my $b = $self->_cbuilder;
+  my $have = $b && $b->have_compiler;
   $self->log_verbose($have ? "ok.\n" : "failed.\n");
   return $p->{have_compiler} = $have;
 }
 
 sub compile_c {
   my ($self, $file, %args) = @_;
-  my $b = $self->_cbuilder;
+  my $b = $self->_cbuilder
+    or die "Module::Build is not configured with C_support";
 
   my $obj_file = $b->object_file($file);
   $self->add_to_cleanup($obj_file);
@@ -3539,7 +3539,9 @@ sub link_c {
   my $module_name = $self->module_name;
   $module_name  ||= $spec->{module_name};
 
-  $self->_cbuilder->link(
+  my $b = $self->_cbuilder
+    or die "Module::Build is not configured with C_support";
+  $b->link(
     module_name => $module_name,
     objects     => [$spec->{obj_file}, @$objects],
     lib_file    => $spec->{lib_file},
